--- a/package.json
+++ b/package.json
@@ -13,7 +13,15 @@
     "type": "git",
     "url": "https://github.com/mattcpchen/graphql-movie-collection.git"
   },
-  "keywords": ["GraphQL", "react", "reactjs", "redux", "react-redux", "TMBd"],
+  "keywords": [
+    "GraphQL",
+    "react",
+    "reactjs",
+    "redux",
+    "react-redux",
+    "react-router-redux",
+    "TMBd"
+  ],
   "scripts": {
     "dev:client": "NODE_ENV=devForClient node server/index.js",
     "dev:server": "NODE_ENV=devForServer nodemon server/index.js",
