--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.1.0",
